--- a/Projeto.ipynb
+++ b/Projeto.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\henri\\AppData\\Local\\Temp\\ipykernel_5472\\2138766679.py:6: DeprecationWarning: load_dataset is deprecated and will be removed in future version.\n",
+      "c:\\Users\\henri\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "C:\\Users\\henri\\AppData\\Local\\Temp\\ipykernel_28932\\1382946363.py:6: DeprecationWarning: load_dataset is deprecated and will be removed in future version.\n",
       "  df = kagglehub.load_dataset(\n"
      ]
     },
@@ -17,55 +19,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading from https://www.kaggle.com/api/v1/datasets/download/asaniczka/top-spotify-songs-in-73-countries-daily-updated?dataset_version_number=543&file_name=universal_top_spotify_songs.csv...\n"
+      "Downloading from https://www.kaggle.com/api/v1/datasets/download/asaniczka/top-spotify-songs-in-73-countries-daily-updated?dataset_version_number=544&file_name=universal_top_spotify_songs.csv...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 424M/424M [03:22<00:00, 2.20MB/s] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First 5 records:                spotify_id                name                artists  \\\n",
-      "0  7so0lgd0zP2Sbgs2d7a1SZ    Die With A Smile  Lady Gaga, Bruno Mars   \n",
-      "1  4wJ5Qq0jBN4ajy7ouZIV1c                APT.       ROSÉ, Bruno Mars   \n",
-      "2  6dOtVTDdiauQNBQEDOtlAB  BIRDS OF A FEATHER          Billie Eilish   \n",
-      "3  3LPLRNr58Z9Pn0clnEtkXb             Anxiety                Doechii   \n",
-      "4  2CGNAOSuO1MEFCbBRgUzjd   luther (with sza)    Kendrick Lamar, SZA   \n",
-      "\n",
-      "   daily_rank  daily_movement  weekly_movement country snapshot_date  \\\n",
-      "0           1               0                0     NaN    2025-03-31   \n",
-      "1           2               0                0     NaN    2025-03-31   \n",
-      "2           3               0                0     NaN    2025-03-31   \n",
-      "3           4               0                1     NaN    2025-03-31   \n",
-      "4           5               0               -1     NaN    2025-03-31   \n",
-      "\n",
-      "   popularity  is_explicit  ...  key loudness mode  speechiness  acousticness  \\\n",
-      "0          88        False  ...    6   -7.727    0       0.0317        0.2890   \n",
-      "1          92        False  ...    0   -4.477    0       0.2600        0.0283   \n",
-      "2          98        False  ...    2  -10.171    1       0.0358        0.2000   \n",
-      "3          85         True  ...    0   -6.818    1       0.0394        0.3210   \n",
-      "4          94        False  ...    2   -7.546    1       0.1250        0.2510   \n",
-      "\n",
-      "   instrumentalness  liveness  valence    tempo  time_signature  \n",
-      "0          0.000000     0.126    0.498  157.964               3  \n",
-      "1          0.000000     0.355    0.939  149.027               4  \n",
-      "2          0.060800     0.117    0.438  104.978               4  \n",
-      "3          0.000294     0.105    0.881  129.013               4  \n",
-      "4          0.000000     0.248    0.576  138.008               4  \n",
-      "\n",
-      "[5 rows x 25 columns]\n"
+      "100%|██████████| 424M/424M [02:29<00:00, 2.98MB/s] \n"
      ]
     }
    ],
    "source": [
     "import kagglehub\n",
     "from kagglehub import KaggleDatasetAdapter\n",
+    "import pandas\n",
     "\n",
     "file_path = \"universal_top_spotify_songs.csv\"\n",
     "\n",
@@ -85,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +110,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2025-03-31</td>\n",
+       "      <td>2025-04-01</td>\n",
        "      <td>88</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
@@ -166,7 +134,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2025-03-31</td>\n",
+       "      <td>2025-04-01</td>\n",
        "      <td>92</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
@@ -190,8 +158,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2025-03-31</td>\n",
-       "      <td>98</td>\n",
+       "      <td>2025-04-01</td>\n",
+       "      <td>99</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>2</td>\n",
@@ -207,14 +175,38 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>2RkZ5LkEzeHGRsmDqKwmaJ</td>\n",
+       "      <td>Ordinary</td>\n",
+       "      <td>Alex Warren</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>46</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2025-04-01</td>\n",
+       "      <td>70</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-6.141</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0600</td>\n",
+       "      <td>0.7040</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.055</td>\n",
+       "      <td>0.391</td>\n",
+       "      <td>168.115</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>3LPLRNr58Z9Pn0clnEtkXb</td>\n",
        "      <td>Anxiety</td>\n",
        "      <td>Doechii</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2025-03-31</td>\n",
+       "      <td>2025-04-01</td>\n",
        "      <td>85</td>\n",
        "      <td>True</td>\n",
        "      <td>...</td>\n",
@@ -227,30 +219,6 @@
        "      <td>0.105</td>\n",
        "      <td>0.881</td>\n",
        "      <td>129.013</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2CGNAOSuO1MEFCbBRgUzjd</td>\n",
-       "      <td>luther (with sza)</td>\n",
-       "      <td>Kendrick Lamar, SZA</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2025-03-31</td>\n",
-       "      <td>94</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-7.546</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.1250</td>\n",
-       "      <td>0.2510</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.248</td>\n",
-       "      <td>0.576</td>\n",
-       "      <td>138.008</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -278,7 +246,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1879859</th>\n",
+       "      <th>1883459</th>\n",
        "      <td>0AYt6NMyyLd0rLuvr0UkMH</td>\n",
        "      <td>Slime You Out (feat. SZA)</td>\n",
        "      <td>Drake, SZA</td>\n",
@@ -302,7 +270,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1879860</th>\n",
+       "      <th>1883460</th>\n",
        "      <td>2Gk6fi0dqt91NKvlzGsmm7</td>\n",
        "      <td>SAY MY GRACE (feat. Travis Scott)</td>\n",
        "      <td>Offset, Travis Scott</td>\n",
@@ -326,7 +294,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1879861</th>\n",
+       "      <th>1883461</th>\n",
        "      <td>26b3oVLrRUaaybJulow9kz</td>\n",
        "      <td>People</td>\n",
        "      <td>Libianca</td>\n",
@@ -350,7 +318,7 @@
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1879862</th>\n",
+       "      <th>1883462</th>\n",
        "      <td>5ydjxBSUIDn26MFzU3asP4</td>\n",
        "      <td>Rainy Days</td>\n",
        "      <td>V</td>\n",
@@ -374,7 +342,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1879863</th>\n",
+       "      <th>1883463</th>\n",
        "      <td>59NraMJsLaMCVtwXTSia8i</td>\n",
        "      <td>Prada</td>\n",
        "      <td>cassö, RAYE, D-Block Europe</td>\n",
@@ -399,7 +367,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1879864 rows × 25 columns</p>\n",
+       "<p>1883464 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -407,71 +375,71 @@
        "0        7so0lgd0zP2Sbgs2d7a1SZ                   Die With A Smile   \n",
        "1        4wJ5Qq0jBN4ajy7ouZIV1c                               APT.   \n",
        "2        6dOtVTDdiauQNBQEDOtlAB                 BIRDS OF A FEATHER   \n",
-       "3        3LPLRNr58Z9Pn0clnEtkXb                            Anxiety   \n",
-       "4        2CGNAOSuO1MEFCbBRgUzjd                  luther (with sza)   \n",
+       "3        2RkZ5LkEzeHGRsmDqKwmaJ                           Ordinary   \n",
+       "4        3LPLRNr58Z9Pn0clnEtkXb                            Anxiety   \n",
        "...                         ...                                ...   \n",
-       "1879859  0AYt6NMyyLd0rLuvr0UkMH          Slime You Out (feat. SZA)   \n",
-       "1879860  2Gk6fi0dqt91NKvlzGsmm7  SAY MY GRACE (feat. Travis Scott)   \n",
-       "1879861  26b3oVLrRUaaybJulow9kz                             People   \n",
-       "1879862  5ydjxBSUIDn26MFzU3asP4                         Rainy Days   \n",
-       "1879863  59NraMJsLaMCVtwXTSia8i                              Prada   \n",
+       "1883459  0AYt6NMyyLd0rLuvr0UkMH          Slime You Out (feat. SZA)   \n",
+       "1883460  2Gk6fi0dqt91NKvlzGsmm7  SAY MY GRACE (feat. Travis Scott)   \n",
+       "1883461  26b3oVLrRUaaybJulow9kz                             People   \n",
+       "1883462  5ydjxBSUIDn26MFzU3asP4                         Rainy Days   \n",
+       "1883463  59NraMJsLaMCVtwXTSia8i                              Prada   \n",
        "\n",
        "                             artists  daily_rank  daily_movement  \\\n",
        "0              Lady Gaga, Bruno Mars           1               0   \n",
        "1                   ROSÉ, Bruno Mars           2               0   \n",
        "2                      Billie Eilish           3               0   \n",
-       "3                            Doechii           4               0   \n",
-       "4                Kendrick Lamar, SZA           5               0   \n",
+       "3                        Alex Warren           4               2   \n",
+       "4                            Doechii           5              -1   \n",
        "...                              ...         ...             ...   \n",
-       "1879859                   Drake, SZA          46               4   \n",
-       "1879860         Offset, Travis Scott          47               3   \n",
-       "1879861                     Libianca          48               2   \n",
-       "1879862                            V          49               1   \n",
-       "1879863  cassö, RAYE, D-Block Europe          50               0   \n",
+       "1883459                   Drake, SZA          46               4   \n",
+       "1883460         Offset, Travis Scott          47               3   \n",
+       "1883461                     Libianca          48               2   \n",
+       "1883462                            V          49               1   \n",
+       "1883463  cassö, RAYE, D-Block Europe          50               0   \n",
        "\n",
        "         weekly_movement country snapshot_date  popularity  is_explicit  ...  \\\n",
-       "0                      0     NaN    2025-03-31          88        False  ...   \n",
-       "1                      0     NaN    2025-03-31          92        False  ...   \n",
-       "2                      0     NaN    2025-03-31          98        False  ...   \n",
-       "3                      1     NaN    2025-03-31          85         True  ...   \n",
-       "4                     -1     NaN    2025-03-31          94        False  ...   \n",
+       "0                      0     NaN    2025-04-01          88        False  ...   \n",
+       "1                      0     NaN    2025-04-01          92        False  ...   \n",
+       "2                      0     NaN    2025-04-01          99        False  ...   \n",
+       "3                     46     NaN    2025-04-01          70        False  ...   \n",
+       "4                     -1     NaN    2025-04-01          85         True  ...   \n",
        "...                  ...     ...           ...         ...          ...  ...   \n",
-       "1879859                0      AE    2023-10-18          84         True  ...   \n",
-       "1879860                0      AE    2023-10-18          80         True  ...   \n",
-       "1879861                0      AE    2023-10-18          88        False  ...   \n",
-       "1879862                0      AE    2023-10-18          88        False  ...   \n",
-       "1879863                0      AE    2023-10-18          94         True  ...   \n",
+       "1883459                0      AE    2023-10-18          84         True  ...   \n",
+       "1883460                0      AE    2023-10-18          80         True  ...   \n",
+       "1883461                0      AE    2023-10-18          88        False  ...   \n",
+       "1883462                0      AE    2023-10-18          88        False  ...   \n",
+       "1883463                0      AE    2023-10-18          94         True  ...   \n",
        "\n",
        "         key loudness mode  speechiness  acousticness  instrumentalness  \\\n",
        "0          6   -7.727    0       0.0317        0.2890          0.000000   \n",
        "1          0   -4.477    0       0.2600        0.0283          0.000000   \n",
        "2          2  -10.171    1       0.0358        0.2000          0.060800   \n",
-       "3          0   -6.818    1       0.0394        0.3210          0.000294   \n",
-       "4          2   -7.546    1       0.1250        0.2510          0.000000   \n",
+       "3          2   -6.141    1       0.0600        0.7040          0.000007   \n",
+       "4          0   -6.818    1       0.0394        0.3210          0.000294   \n",
        "...      ...      ...  ...          ...           ...               ...   \n",
-       "1879859    5   -9.243    0       0.0502        0.5080          0.000000   \n",
-       "1879860   10   -5.060    1       0.0452        0.0585          0.000000   \n",
-       "1879861   10   -7.621    0       0.0678        0.5510          0.000013   \n",
-       "1879862    9   -8.016    0       0.0875        0.7390          0.000000   \n",
-       "1879863    8   -5.804    1       0.0375        0.0010          0.000002   \n",
+       "1883459    5   -9.243    0       0.0502        0.5080          0.000000   \n",
+       "1883460   10   -5.060    1       0.0452        0.0585          0.000000   \n",
+       "1883461   10   -7.621    0       0.0678        0.5510          0.000013   \n",
+       "1883462    9   -8.016    0       0.0875        0.7390          0.000000   \n",
+       "1883463    8   -5.804    1       0.0375        0.0010          0.000002   \n",
        "\n",
        "         liveness  valence    tempo  time_signature  \n",
        "0           0.126    0.498  157.964               3  \n",
        "1           0.355    0.939  149.027               4  \n",
        "2           0.117    0.438  104.978               4  \n",
-       "3           0.105    0.881  129.013               4  \n",
-       "4           0.248    0.576  138.008               4  \n",
+       "3           0.055    0.391  168.115               3  \n",
+       "4           0.105    0.881  129.013               4  \n",
        "...           ...      ...      ...             ...  \n",
-       "1879859     0.259    0.105   88.880               3  \n",
-       "1879860     0.132    0.476  121.879               4  \n",
-       "1879861     0.102    0.693  124.357               5  \n",
-       "1879862     0.148    0.282   74.828               4  \n",
-       "1879863     0.113    0.422  141.904               4  \n",
+       "1883459     0.259    0.105   88.880               3  \n",
+       "1883460     0.132    0.476  121.879               4  \n",
+       "1883461     0.102    0.693  124.357               5  \n",
+       "1883462     0.148    0.282   74.828               4  \n",
+       "1883463     0.113    0.422  141.904               4  \n",
        "\n",
-       "[1879864 rows x 25 columns]"
+       "[1883464 rows x 25 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,6 +453,48 @@
    "metadata": {},
    "source": [
     "# Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spotify_id\n",
+      "name\n",
+      "artists\n",
+      "daily_rank\n",
+      "daily_movement\n",
+      "weekly_movement\n",
+      "country\n",
+      "snapshot_date\n",
+      "popularity\n",
+      "is_explicit\n",
+      "duration_ms\n",
+      "album_name\n",
+      "album_release_date\n",
+      "danceability\n",
+      "energy\n",
+      "key\n",
+      "loudness\n",
+      "mode\n",
+      "speechiness\n",
+      "acousticness\n",
+      "instrumentalness\n",
+      "liveness\n",
+      "valence\n",
+      "tempo\n",
+      "time_signature\n"
+     ]
+    }
+   ],
+   "source": [
+    "for feature in (df.columns.tolist()):\n",
+    "    print(feature)"
    ]
   },
   {
