--- a/Projeto.ipynb
+++ b/Projeto.ipynb
@@ -492,7 +492,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 20 Análises univariativas"
+    "# 20 Análises Univariativas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 10 Análises Multirate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5 Métodos de visualizar os dados"
    ]
   }
  ],
