--- a/Projeto.ipynb
+++ b/Projeto.ipynb
@@ -2,15 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\henri\\AppData\\Local\\Temp\\ipykernel_28932\\131758281.py:7: DeprecationWarning: load_dataset is deprecated and will be removed in future version.\n",
+      "c:\\Users\\henri\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "C:\\Users\\henri\\AppData\\Local\\Temp\\ipykernel_4700\\131758281.py:7: DeprecationWarning: load_dataset is deprecated and will be removed in future version.\n",
       "  df = kagglehub.load_dataset(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.10), please consider upgrading to the latest version (0.3.11).\n",
+      "Downloading from https://www.kaggle.com/api/v1/datasets/download/asaniczka/top-spotify-songs-in-73-countries-daily-updated?dataset_version_number=550&file_name=universal_top_spotify_songs.csv...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 429M/429M [03:42<00:00, 2.03MB/s] \n"
      ]
     }
    ],
@@ -37,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -94,8 +111,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2025-04-01</td>\n",
-       "      <td>88</td>\n",
+       "      <td>2025-04-07</td>\n",
+       "      <td>89</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>6</td>\n",
@@ -118,7 +135,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2025-04-01</td>\n",
+       "      <td>2025-04-07</td>\n",
        "      <td>92</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
@@ -142,7 +159,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2025-04-01</td>\n",
+       "      <td>2025-04-07</td>\n",
        "      <td>99</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
@@ -163,11 +180,11 @@
        "      <td>Ordinary</td>\n",
        "      <td>Alex Warren</td>\n",
        "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>46</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2025-04-01</td>\n",
-       "      <td>70</td>\n",
+       "      <td>2025-04-07</td>\n",
+       "      <td>81</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>2</td>\n",
@@ -183,26 +200,26 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3LPLRNr58Z9Pn0clnEtkXb</td>\n",
-       "      <td>Anxiety</td>\n",
-       "      <td>Doechii</td>\n",
+       "      <td>7ne4VBA60CxGM75vw0EYad</td>\n",
+       "      <td>That’s So True</td>\n",
+       "      <td>Gracie Abrams</td>\n",
        "      <td>5</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2025-04-01</td>\n",
-       "      <td>85</td>\n",
+       "      <td>2025-04-07</td>\n",
+       "      <td>97</td>\n",
        "      <td>True</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-6.818</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0394</td>\n",
-       "      <td>0.3210</td>\n",
-       "      <td>0.000294</td>\n",
-       "      <td>0.105</td>\n",
-       "      <td>0.881</td>\n",
-       "      <td>129.013</td>\n",
+       "      <td>-4.169</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0368</td>\n",
+       "      <td>0.2140</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.159</td>\n",
+       "      <td>0.372</td>\n",
+       "      <td>108.548</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -230,7 +247,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1883459</th>\n",
+       "      <th>1905052</th>\n",
        "      <td>0AYt6NMyyLd0rLuvr0UkMH</td>\n",
        "      <td>Slime You Out (feat. SZA)</td>\n",
        "      <td>Drake, SZA</td>\n",
@@ -254,7 +271,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1883460</th>\n",
+       "      <th>1905053</th>\n",
        "      <td>2Gk6fi0dqt91NKvlzGsmm7</td>\n",
        "      <td>SAY MY GRACE (feat. Travis Scott)</td>\n",
        "      <td>Offset, Travis Scott</td>\n",
@@ -278,7 +295,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1883461</th>\n",
+       "      <th>1905054</th>\n",
        "      <td>26b3oVLrRUaaybJulow9kz</td>\n",
        "      <td>People</td>\n",
        "      <td>Libianca</td>\n",
@@ -302,7 +319,7 @@
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1883462</th>\n",
+       "      <th>1905055</th>\n",
        "      <td>5ydjxBSUIDn26MFzU3asP4</td>\n",
        "      <td>Rainy Days</td>\n",
        "      <td>V</td>\n",
@@ -326,7 +343,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1883463</th>\n",
+       "      <th>1905056</th>\n",
        "      <td>59NraMJsLaMCVtwXTSia8i</td>\n",
        "      <td>Prada</td>\n",
        "      <td>cassö, RAYE, D-Block Europe</td>\n",
@@ -351,7 +368,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1883464 rows × 25 columns</p>\n",
+       "<p>1905057 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -360,70 +377,70 @@
        "1        4wJ5Qq0jBN4ajy7ouZIV1c                               APT.   \n",
        "2        6dOtVTDdiauQNBQEDOtlAB                 BIRDS OF A FEATHER   \n",
        "3        2RkZ5LkEzeHGRsmDqKwmaJ                           Ordinary   \n",
-       "4        3LPLRNr58Z9Pn0clnEtkXb                            Anxiety   \n",
+       "4        7ne4VBA60CxGM75vw0EYad                     That’s So True   \n",
        "...                         ...                                ...   \n",
-       "1883459  0AYt6NMyyLd0rLuvr0UkMH          Slime You Out (feat. SZA)   \n",
-       "1883460  2Gk6fi0dqt91NKvlzGsmm7  SAY MY GRACE (feat. Travis Scott)   \n",
-       "1883461  26b3oVLrRUaaybJulow9kz                             People   \n",
-       "1883462  5ydjxBSUIDn26MFzU3asP4                         Rainy Days   \n",
-       "1883463  59NraMJsLaMCVtwXTSia8i                              Prada   \n",
+       "1905052  0AYt6NMyyLd0rLuvr0UkMH          Slime You Out (feat. SZA)   \n",
+       "1905053  2Gk6fi0dqt91NKvlzGsmm7  SAY MY GRACE (feat. Travis Scott)   \n",
+       "1905054  26b3oVLrRUaaybJulow9kz                             People   \n",
+       "1905055  5ydjxBSUIDn26MFzU3asP4                         Rainy Days   \n",
+       "1905056  59NraMJsLaMCVtwXTSia8i                              Prada   \n",
        "\n",
        "                             artists  daily_rank  daily_movement  \\\n",
        "0              Lady Gaga, Bruno Mars           1               0   \n",
        "1                   ROSÉ, Bruno Mars           2               0   \n",
        "2                      Billie Eilish           3               0   \n",
-       "3                        Alex Warren           4               2   \n",
-       "4                            Doechii           5              -1   \n",
+       "3                        Alex Warren           4               0   \n",
+       "4                      Gracie Abrams           5               0   \n",
        "...                              ...         ...             ...   \n",
-       "1883459                   Drake, SZA          46               4   \n",
-       "1883460         Offset, Travis Scott          47               3   \n",
-       "1883461                     Libianca          48               2   \n",
-       "1883462                            V          49               1   \n",
-       "1883463  cassö, RAYE, D-Block Europe          50               0   \n",
+       "1905052                   Drake, SZA          46               4   \n",
+       "1905053         Offset, Travis Scott          47               3   \n",
+       "1905054                     Libianca          48               2   \n",
+       "1905055                            V          49               1   \n",
+       "1905056  cassö, RAYE, D-Block Europe          50               0   \n",
        "\n",
        "         weekly_movement country snapshot_date  popularity  is_explicit  ...  \\\n",
-       "0                      0     NaN    2025-04-01          88        False  ...   \n",
-       "1                      0     NaN    2025-04-01          92        False  ...   \n",
-       "2                      0     NaN    2025-04-01          99        False  ...   \n",
-       "3                     46     NaN    2025-04-01          70        False  ...   \n",
-       "4                     -1     NaN    2025-04-01          85         True  ...   \n",
+       "0                      0     NaN    2025-04-07          89        False  ...   \n",
+       "1                      0     NaN    2025-04-07          92        False  ...   \n",
+       "2                      0     NaN    2025-04-07          99        False  ...   \n",
+       "3                      2     NaN    2025-04-07          81        False  ...   \n",
+       "4                      3     NaN    2025-04-07          97         True  ...   \n",
        "...                  ...     ...           ...         ...          ...  ...   \n",
-       "1883459                0      AE    2023-10-18          84         True  ...   \n",
-       "1883460                0      AE    2023-10-18          80         True  ...   \n",
-       "1883461                0      AE    2023-10-18          88        False  ...   \n",
-       "1883462                0      AE    2023-10-18          88        False  ...   \n",
-       "1883463                0      AE    2023-10-18          94         True  ...   \n",
+       "1905052                0      AE    2023-10-18          84         True  ...   \n",
+       "1905053                0      AE    2023-10-18          80         True  ...   \n",
+       "1905054                0      AE    2023-10-18          88        False  ...   \n",
+       "1905055                0      AE    2023-10-18          88        False  ...   \n",
+       "1905056                0      AE    2023-10-18          94         True  ...   \n",
        "\n",
        "         key loudness mode  speechiness  acousticness  instrumentalness  \\\n",
        "0          6   -7.727    0       0.0317        0.2890          0.000000   \n",
        "1          0   -4.477    0       0.2600        0.0283          0.000000   \n",
        "2          2  -10.171    1       0.0358        0.2000          0.060800   \n",
        "3          2   -6.141    1       0.0600        0.7040          0.000007   \n",
-       "4          0   -6.818    1       0.0394        0.3210          0.000294   \n",
+       "4          1   -4.169    1       0.0368        0.2140          0.000000   \n",
        "...      ...      ...  ...          ...           ...               ...   \n",
-       "1883459    5   -9.243    0       0.0502        0.5080          0.000000   \n",
-       "1883460   10   -5.060    1       0.0452        0.0585          0.000000   \n",
-       "1883461   10   -7.621    0       0.0678        0.5510          0.000013   \n",
-       "1883462    9   -8.016    0       0.0875        0.7390          0.000000   \n",
-       "1883463    8   -5.804    1       0.0375        0.0010          0.000002   \n",
+       "1905052    5   -9.243    0       0.0502        0.5080          0.000000   \n",
+       "1905053   10   -5.060    1       0.0452        0.0585          0.000000   \n",
+       "1905054   10   -7.621    0       0.0678        0.5510          0.000013   \n",
+       "1905055    9   -8.016    0       0.0875        0.7390          0.000000   \n",
+       "1905056    8   -5.804    1       0.0375        0.0010          0.000002   \n",
        "\n",
        "         liveness  valence    tempo  time_signature  \n",
        "0           0.126    0.498  157.964               3  \n",
        "1           0.355    0.939  149.027               4  \n",
        "2           0.117    0.438  104.978               4  \n",
        "3           0.055    0.391  168.115               3  \n",
-       "4           0.105    0.881  129.013               4  \n",
+       "4           0.159    0.372  108.548               4  \n",
        "...           ...      ...      ...             ...  \n",
-       "1883459     0.259    0.105   88.880               3  \n",
-       "1883460     0.132    0.476  121.879               4  \n",
-       "1883461     0.102    0.693  124.357               5  \n",
-       "1883462     0.148    0.282   74.828               4  \n",
-       "1883463     0.113    0.422  141.904               4  \n",
+       "1905052     0.259    0.105   88.880               3  \n",
+       "1905053     0.132    0.476  121.879               4  \n",
+       "1905054     0.102    0.693  124.357               5  \n",
+       "1905055     0.148    0.282   74.828               4  \n",
+       "1905056     0.113    0.422  141.904               4  \n",
        "\n",
-       "[1883464 rows x 25 columns]"
+       "[1905057 rows x 25 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -486,6 +503,127 @@
    "metadata": {},
    "source": [
     "# Class Ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------------\n",
+      "spotify_id\n",
+      "6dOtVTDdiauQNBQEDOtlAB    14630\n",
+      "2plbrEY59IikOBgBGLjaoe    12096\n",
+      "17phhZDn6oGtzMe56NuWvj    11201\n",
+      "3xkHsmpQCBMytMJNiDf3Ii     9703\n",
+      "7bywjHOc0wSjGGbj04XbVi     8522\n",
+      "                          ...  \n",
+      "6hrH0mb1qQsd4VRxssKa6p        1\n",
+      "0oEggQXxzb1U5oCTUQK1GB        1\n",
+      "6b56cSwwp8JXDQiZ4dXkBf        1\n",
+      "3uWDhz3cIoWzN1944cUmq6        1\n",
+      "4dkAVeT8SCueEWoKK3Q2R0        1\n",
+      "Name: count, Length: 22394, dtype: int64\n",
+      "-----------------------------\n",
+      "name\n",
+      "BIRDS OF A FEATHER    14630\n",
+      "Die With A Smile      13903\n",
+      "Espresso              12663\n",
+      "Beautiful Things      12519\n",
+      "Lose Control          11201\n",
+      "                      ...  \n",
+      "Suicide                   1\n",
+      "trenger min love          1\n",
+      "Te văd în trecut          1\n",
+      "Me Usa                    1\n",
+      "Idiota                    1\n",
+      "Name: count, Length: 19618, dtype: int64\n",
+      "-----------------------------\n",
+      "artists\n",
+      "Billie Eilish                    29665\n",
+      "Sabrina Carpenter                27752\n",
+      "Bad Bunny                        25200\n",
+      "KAROL G                          19099\n",
+      "Taylor Swift                     18630\n",
+      "                                 ...  \n",
+      "Ayra Starr, Milar                    1\n",
+      "MadMan, thasup                       1\n",
+      "Diss Gacha, Sala, Wiz Khalifa        1\n",
+      "MadMan, Gemitaiz                     1\n",
+      "Leto, Koba LaD                       1\n",
+      "Name: count, Length: 12521, dtype: int64\n",
+      "-----------------------------\n",
+      "country\n",
+      "DO    26325\n",
+      "IT    26324\n",
+      "NI    26320\n",
+      "PL    26314\n",
+      "HU    26313\n",
+      "      ...  \n",
+      "VN    25556\n",
+      "UY    25553\n",
+      "LU    25497\n",
+      "VE    25413\n",
+      "GB    20869\n",
+      "Name: count, Length: 72, dtype: int64\n",
+      "-----------------------------\n",
+      "snapshot_date\n",
+      "2024-03-16    3942\n",
+      "2023-11-20    3866\n",
+      "2024-03-18    3836\n",
+      "2024-03-14    3769\n",
+      "2023-10-27    3766\n",
+      "              ... \n",
+      "2024-04-20    3150\n",
+      "2024-04-24    2500\n",
+      "2024-04-23    2100\n",
+      "2024-04-21    1900\n",
+      "2024-04-22    1850\n",
+      "Name: count, Length: 526, dtype: int64\n",
+      "-----------------------------\n",
+      "is_explicit\n",
+      "False    1278358\n",
+      "True      626699\n",
+      "Name: count, dtype: int64\n",
+      "-----------------------------\n",
+      "album_name\n",
+      "HIT ME HARD AND SOFT                                27892\n",
+      "DeBÍ TiRAR MáS FOToS                                22282\n",
+      "nadie sabe lo que va a pasar mañana                 18067\n",
+      "FERXXOCALIPSIS                                      13918\n",
+      "Short n' Sweet                                      13373\n",
+      "                                                    ...  \n",
+      "Por Amor A Mi Pueblo                                    1\n",
+      "Hot Ones                                                1\n",
+      "PROTOMARANZA                                            1\n",
+      "Medicijn                                                1\n",
+      "Obudziłem się w Bukareszcie (Def Jam World Tour)        1\n",
+      "Name: count, Length: 14842, dtype: int64\n",
+      "-----------------------------\n",
+      "album_release_date\n",
+      "2024-05-17    31790\n",
+      "2023-09-15    27840\n",
+      "2024-04-05    25802\n",
+      "2023-12-01    25289\n",
+      "2023-10-13    25125\n",
+      "              ...  \n",
+      "2021-02-09        1\n",
+      "2021-11-22        1\n",
+      "2015-05-30        1\n",
+      "2015-10-23        1\n",
+      "2020-01-15        1\n",
+      "Name: count, Length: 2780, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in df.select_dtypes(exclude='number').columns:\n",
+    "    print(f'-----------------------------')\n",
+    "    print(df[col].value_counts())\n"
    ]
   },
   {
