--- a/Projeto.ipynb
+++ b/Projeto.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\henri\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "C:\\Users\\henri\\AppData\\Local\\Temp\\ipykernel_4700\\131758281.py:7: DeprecationWarning: load_dataset is deprecated and will be removed in future version.\n",
       "  df = kagglehub.load_dataset(\n"
      ]
@@ -19,15 +17,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.10), please consider upgrading to the latest version (0.3.11).\n",
-      "Downloading from https://www.kaggle.com/api/v1/datasets/download/asaniczka/top-spotify-songs-in-73-countries-daily-updated?dataset_version_number=550&file_name=universal_top_spotify_songs.csv...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 429M/429M [03:42<00:00, 2.03MB/s] \n"
+      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.10), please consider upgrading to the latest version (0.3.11).\n"
      ]
     }
    ],
