--- a/ProjetoDataScience.ipynb
+++ b/ProjetoDataScience.ipynb
@@ -9,7 +9,7 @@
         }
       },
       "source": [
-        "# Final Report - Data Science\n",
+        "# **Final Report - Data Science**\n",
         "## Bachelor's Degree in Computer Science / PUCPR\n",
         "\n",
         "**Prof. Jean Paul Barddal** / **Prof. Rayson Laroca**\n",
@@ -36,12 +36,12 @@
         }
       },
       "source": [
-        "# Import the libs you need"
+        "# **Import the libs you need**"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "itrIGnaaVQnH",
         "pycharm": {
@@ -53,7 +53,8 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import kagglehub\n",
-        "from kagglehub import KaggleDatasetAdapter"
+        "from kagglehub import KaggleDatasetAdapter\n",
+        "from collections import Counter"
       ]
     },
     {
@@ -65,7 +66,7 @@
         }
       },
       "source": [
-        "# Load your data"
+        "# **Load your data**"
       ]
     },
     {
@@ -82,14 +83,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "-VCzmIHcgA2P",
         "pycharm": {
           "name": "#%%\n"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\henri\\AppData\\Local\\Temp\\ipykernel_27760\\1735426109.py:3: DeprecationWarning: load_dataset is deprecated and will be removed in future version.\n",
+            "  df = kagglehub.load_dataset(\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.10), please consider upgrading to the latest version (0.3.11).\n",
+            "Downloading from https://www.kaggle.com/api/v1/datasets/download/asaniczka/top-spotify-songs-in-73-countries-daily-updated?dataset_version_number=551&file_name=universal_top_spotify_songs.csv...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 430M/430M [01:09<00:00, 6.52MB/s] \n"
+          ]
+        }
+      ],
       "source": [
         "file_path = \"universal_top_spotify_songs.csv\"\n",
         "\n",
@@ -116,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "Y7WshR3nmZkL",
         "pycharm": {
@@ -135,7 +160,7 @@
         "id": "8R3Z5xgWyj1i"
       },
       "source": [
-        "# Statistical Description"
+        "# **Statistical Description**"
       ]
     },
     {
@@ -153,14 +178,90 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "y5IFTWiTyj1i"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "# use as many code and text cells as needed"
+        "### **Number of Instances**:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Number of instances: 1908657\n"
+          ]
+        }
+      ],
+      "source": [
+        "row_count = len(df)\n",
+        "print(f\"Number of instances: {row_count}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### **25 Features**:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**spotify_id**: The unique identifier for the song in the Spotify database. `(str)`\n",
+        "\n",
+        "**name**: The title of the song. `(str)`\n",
+        "\n",
+        "**artists**: The name(s) of the artist(s) associated with the song. `(str)`\n",
+        "\n",
+        "**daily_rank**: The daily rank of the song in the top 50 list. `(int)`\n",
+        "\n",
+        "**daily_movement**: The change in rankings compared to the previous day. `(int)`\n",
+        "\n",
+        "**weekly_movement**: The change in rankings compared to the previous week. `(int)`\n",
+        "\n",
+        "**country**: The ISO code of the country of the Top 50 Playlist. If Null, then the playlist if 'Global Top 50'. `(str)`\n",
+        "\n",
+        "**snapshot_date**: The date on which the data was collected from the Spotify. `(str)`\n",
+        "\n",
+        "**popularity**: A measure of the song's current popularity on Spotify. `(int)`\n",
+        "\n",
+        "**is_explicit**: Indicates whether the song contains explicit lyrics. `(bool)`\n",
+        "\n",
+        "**duration_ms**: The duration of the song in milliseconds. `(int)`\n",
+        "\n",
+        "**album_name**: The title of the album the song belongs to. `(str)`\n",
+        "\n",
+        "**album_release_date**: The release date of the album the song belongs to. `(str)`\n",
+        "\n",
+        "**danceability**: A measure of how suitable the song is for dancing based on various musical elements. `(float)`\n",
+        "\n",
+        "**energy**: A measure of the intensity and activity level of the song. `(float)`\n",
+        "\n",
+        "**key**: The key of the song. `(int)`\n",
+        "\n",
+        "**loudness**: The overall loudness of the song in decibels. `(float)`\n",
+        "\n",
+        "**mode**: Indicates whether the song is in a major or minor key. `(int)`\n",
+        "\n",
+        "**speechiness**: A measure of the presence of spoken words in the song. `(float)`\n",
+        "\n",
+        "**acousticness**: A measure of the acoustic quality of the song. `(float)`\n",
+        "\n",
+        "**instrumentalness**: A measure of the likelihood that the song does not contain vocals. `(float)`\n",
+        "\n",
+        "**liveness**: A measure of the presence of a live audience in the recording. `(float)`\n",
+        "\n",
+        "**valence**: A measure of the musical positiveness conveyed by the song. `(float)`\n",
+        "\n",
+        "**tempo**: The tempo of the song in beats per minute. `(float)`\n",
+        "\n",
+        "**time_signature**: The estimated overall time signature of the song. `(int)`"
       ]
     },
     {
@@ -172,7 +273,7 @@
         }
       },
       "source": [
-        "# Univariate data analysis"
+        "# **Univariate data analysis**"
       ]
     },
     {
@@ -238,7 +339,7 @@
         }
       },
       "source": [
-        "# Multivariate data analysis"
+        "# **Multivariate data analysis**"
       ]
     },
     {
@@ -292,7 +393,7 @@
         }
       },
       "source": [
-        "# Final Plots (Effective Data Visualization)"
+        "# **Final Plots (Effective Data Visualization)**"
       ]
     },
     {
@@ -339,7 +440,7 @@
         }
       },
       "source": [
-        "# Digest"
+        "# **Digest**"
       ]
     },
     {
@@ -374,7 +475,7 @@
         "id": "BDlyU2X8yj1j"
       },
       "source": [
-        "# Machine Learning (**post checkpoint!**)\n",
+        "# **Machine Learning (**post checkpoint!**)**\n",
         "\n",
         "In this section, you must create at least **3 machine learning models** for the task at hand. Depending on the problem's nature, you must select from classification, regression, or clustering models.\n",
         "It is also important that you:\n",
@@ -402,7 +503,7 @@
         }
       },
       "source": [
-        "# Final Steps (Submission)\n"
+        "# **Final Steps (Submission)**\n"
       ]
     },
     {
@@ -455,7 +556,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.4"
+      "version": "3.13.2"
     }
   },
   "nbformat": 4,
